[tool.poetry]
name = "bootcamp08"
version = "0.1.0"
description = ""
authors = ["Igor Passos <passos.igor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandera = "^0.20.4"
pandas = "^2.2.2"
fastparquet = "^2024.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
